CubyParser.java
// Generated from Cuby.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CubyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, COMA=3, DOSPUNTOS=4, PUNTO_COMA=5, PUNTO=6, DOBLEPUNTO=7, 
		OP_NEGACION=8, OP_AND=9, OP_OR=10, OP_IGUALQUE=11, OP_DIFERENTEQUE=12, 
		OP_MAYORQUE=13, OP_MENORQUE=14, OP_MENOROIGUAL=15, OP_MAYOROIGUAL=16, 
		OP_NEGATIVO=17, OP_MULTIPLICACION=18, OP_DIVISION=19, OP_MOD=20, OP_SUMA=21, 
		OP_RESTA=22, OP_DECREMENTAR=23, OP_INCREMENTAR=24, OP_ASIGNACION=25, OP_ASIGNAR_RESTA=26, 
		OP_ASIGNAR_SUMA=27, OP_ASIGNAR_MULTIPLICACION=28, OP_ASIGNAR_DIVISION=29, 
		OP_ASIGNAR_MODULO=30, DELIMITADOR_BLOQUE=31, FIN_LINEA=32, ENTERO=33, 
		BOOLEANO=34, IDENTIFICADOR=35, COMENTARIO=36, ESPACIOS_BLANCO=37, CARACTER=38, 
		TEXTO=39, FUNC_IMPRIMIR=40, FUNC_PRINCIPAL=41, FUNC_A_MAYUSCULA=42, FUNC_A_MINUSCULA=43, 
		FUNC_CARACTER_A_ENTERO=44, FUNC_ENTERO_A_CARACTER=45, FUNC_ENTERO_A_TEXTO=46, 
		FUNC_TEXTO_A_ENTERO=47, FUNC_LONGITUD_TEXTO=48, FUNC_INVERTIR_TEXTO=49, 
		FUNC_ES_LETRA=50, FUNC_ES_DIGITO=51, PARA=52, REPITA=53, MIENTRAS=54, 
		SI=55, SII=56, SINO=57, DEF=58, SALIR=59, RET=60, CASO=61, CUANDO=62, 
		SEGUIR=63, VECES=64, HASTA=65, TIPO_ENTERO=66, TIPO_CARACTER=67, TIPO_TEXTO=68, 
		TIPO_BOOLEANO=69;
	public static final int
		RULE_expresion = 0, RULE_elemento = 1, RULE_literal = 2, RULE_llamada_funcion = 3, 
		RULE_entradas = 4, RULE_entrada = 5, RULE_declarar_identificador = 6, 
		RULE_declaracion_variable = 7, RULE_proposicion = 8, RULE_tipo_dato = 9, 
		RULE_resultado = 10, RULE_condicional = 11, RULE_parametros = 12, RULE_parametro = 13, 
		RULE_expresion_actualizacion = 14, RULE_estructura_repeticion = 15, RULE_bloque = 16, 
		RULE_definir_funcion = 17, RULE_llamada_imprimir = 18, RULE_llamada_amay = 19, 
		RULE_llamada_amin = 20, RULE_llamada_cae = 21, RULE_llamada_eac = 22, 
		RULE_llamada_tae = 23, RULE_llamada_longitud = 24, RULE_llamada_invertir = 25, 
		RULE_llamada_esLetra = 26, RULE_llamada_esDigito = 27, RULE_funcion_principal = 28, 
		RULE_programa = 29;
	public static final String[] ruleNames = {
		"expresion", "elemento", "literal", "llamada_funcion", "entradas", "entrada", 
		"declarar_identificador", "declaracion_variable", "proposicion", "tipo_dato", 
		"resultado", "condicional", "parametros", "parametro", "expresion_actualizacion", 
		"estructura_repeticion", "bloque", "definir_funcion", "llamada_imprimir", 
		"llamada_amay", "llamada_amin", "llamada_cae", "llamada_eac", "llamada_tae", 
		"llamada_longitud", "llamada_invertir", "llamada_esLetra", "llamada_esDigito", 
		"funcion_principal", "programa"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "','", "':'", "';'", "'.'", "'..'", "'~'", "'&&'", 
		"'||'", "'=='", "'!='", "'>'", "'<'", "'<='", "'>='", null, "'*'", "'/'", 
		"'%'", "'+'", null, "'--'", "'++'", "'='", "'-='", "'+='", "'*='", "'/='", 
		"'%='", "'|'", null, null, null, null, null, null, null, null, "'escribir'", 
		"'principal'", "'aMay'", "'aMin'", "'cae'", "'eac'", "'eat'", "'tae'", 
		"'longitud'", "'invertir'", "'esLetra?'", "'esDigito?'", "'para'", "'repita'", 
		"'mientras'", "'si'", "'sii'", "'sino'", "'def'", "'salir'", "'ret'", 
		"'caso'", "'cuando'", "'seguir'", "'veces'", "'hasta'", "'entero'", "'caracter'", 
		"'texto'", "'booleano'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "COMA", "DOSPUNTOS", "PUNTO_COMA", "PUNTO", "DOBLEPUNTO", 
		"OP_NEGACION", "OP_AND", "OP_OR", "OP_IGUALQUE", "OP_DIFERENTEQUE", "OP_MAYORQUE", 
		"OP_MENORQUE", "OP_MENOROIGUAL", "OP_MAYOROIGUAL", "OP_NEGATIVO", "OP_MULTIPLICACION", 
		"OP_DIVISION", "OP_MOD", "OP_SUMA", "OP_RESTA", "OP_DECREMENTAR", "OP_INCREMENTAR", 
		"OP_ASIGNACION", "OP_ASIGNAR_RESTA", "OP_ASIGNAR_SUMA", "OP_ASIGNAR_MULTIPLICACION", 
		"OP_ASIGNAR_DIVISION", "OP_ASIGNAR_MODULO", "DELIMITADOR_BLOQUE", "FIN_LINEA", 
		"ENTERO", "BOOLEANO", "IDENTIFICADOR", "COMENTARIO", "ESPACIOS_BLANCO", 
		"CARACTER", "TEXTO", "FUNC_IMPRIMIR", "FUNC_PRINCIPAL", "FUNC_A_MAYUSCULA", 
		"FUNC_A_MINUSCULA", "FUNC_CARACTER_A_ENTERO", "FUNC_ENTERO_A_CARACTER", 
		"FUNC_ENTERO_A_TEXTO", "FUNC_TEXTO_A_ENTERO", "FUNC_LONGITUD_TEXTO", "FUNC_INVERTIR_TEXTO", 
		"FUNC_ES_LETRA", "FUNC_ES_DIGITO", "PARA", "REPITA", "MIENTRAS", "SI", 
		"SII", "SINO", "DEF", "SALIR", "RET", "CASO", "CUANDO", "SEGUIR", "VECES", 
		"HASTA", "TIPO_ENTERO", "TIPO_CARACTER", "TIPO_TEXTO", "TIPO_BOOLEANO"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cuby.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CubyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpresionContext extends ParserRuleContext {
		public TerminalNode OP_NEGACION() { return getToken(CubyParser.OP_NEGACION, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public TerminalNode OP_MULTIPLICACION() { return getToken(CubyParser.OP_MULTIPLICACION, 0); }
		public TerminalNode OP_DIVISION() { return getToken(CubyParser.OP_DIVISION, 0); }
		public TerminalNode OP_SUMA() { return getToken(CubyParser.OP_SUMA, 0); }
		public TerminalNode OP_RESTA() { return getToken(CubyParser.OP_RESTA, 0); }
		public TerminalNode OP_MAYORQUE() { return getToken(CubyParser.OP_MAYORQUE, 0); }
		public TerminalNode OP_MENORQUE() { return getToken(CubyParser.OP_MENORQUE, 0); }
		public TerminalNode OP_MAYOROIGUAL() { return getToken(CubyParser.OP_MAYOROIGUAL, 0); }
		public TerminalNode OP_MENOROIGUAL() { return getToken(CubyParser.OP_MENOROIGUAL, 0); }
		public TerminalNode OP_IGUALQUE() { return getToken(CubyParser.OP_IGUALQUE, 0); }
		public TerminalNode OP_DIFERENTEQUE() { return getToken(CubyParser.OP_DIFERENTEQUE, 0); }
		public TerminalNode OP_AND() { return getToken(CubyParser.OP_AND, 0); }
		public TerminalNode OP_OR() { return getToken(CubyParser.OP_OR, 0); }
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).exitExpresion(this);
		}
	}

	public final ExpresionContext expresion() throws RecognitionException {
		return expresion(0);
	}

	private ExpresionContext expresion(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpresionContext _localctx = new ExpresionContext(_ctx, _parentState);
		ExpresionContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_expresion, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(61);
				match(OP_NEGACION);
				setState(62);
				expresion(7);
				}
				break;
			case 2:
				{
				setState(63);
				match(OP_NEGACION);
				setState(64);
				expresion(3);
				}
				break;
			case 3:
				{
				setState(65);
				elemento();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(83);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(68);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(69);
						_la = _input.LA(1);
						if ( !(_la==OP_MULTIPLICACION || _la==OP_DIVISION) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(70);
						expresion(7);
						}
						break;
					case 2:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(71);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(72);
						_la = _input.LA(1);
						if ( !(_la==OP_SUMA || _la==OP_RESTA) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(73);
						expresion(6);
						}
						break;
					case 3:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(74);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(75);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP_IGUALQUE) | (1L << OP_DIFERENTEQUE) | (1L << OP_MAYORQUE) | (1L << OP_MENORQUE) | (1L << OP_MENOROIGUAL) | (1L << OP_MAYOROIGUAL))) != 0)) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(76);
						expresion(5);
						}
						break;
					case 4:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(77);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(78);
						match(OP_AND);
						setState(79);
						expresion(3);
						}
						break;
					case 5:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(80);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(81);
						match(OP_OR);
						setState(82);
						expresion(2);
						}
						break;
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ElementoContext extends ParserRuleContext {
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Llamada_funcionContext llamada_funcion() {
			return getRuleContext(Llamada_funcionContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ElementoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elemento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).enterElemento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).exitElemento(this);
		}
	}

	public final ElementoContext elemento() throws RecognitionException {
		ElementoContext _localctx = new ElementoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_elemento);
		try {
			setState(94);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(T__0);
				setState(89);
				expresion(0);
				setState(90);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				llamada_funcion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				literal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode ENTERO() { return getToken(CubyParser.ENTERO, 0); }
		public TerminalNode CARACTER() { return getToken(CubyParser.CARACTER, 0); }
		public TerminalNode TEXTO() { return getToken(CubyParser.TEXTO, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(CubyParser.IDENTIFICADOR, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENTERO) | (1L << IDENTIFICADOR) | (1L << CARACTER) | (1L << TEXTO))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Llamada_funcionContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(CubyParser.IDENTIFICADOR, 0); }
		public EntradasContext entradas() {
			return getRuleContext(EntradasContext.class,0);
		}
		public Llamada_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamada_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).enterLlamada_funcion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).exitLlamada_funcion(this);
		}
	}

	public final Llamada_funcionContext llamada_funcion() throws RecognitionException {
		Llamada_funcionContext _localctx = new Llamada_funcionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_llamada_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(IDENTIFICADOR);
			setState(99);
			match(T__0);
			setState(101);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << OP_NEGACION) | (1L << ENTERO) | (1L << IDENTIFICADOR) | (1L << CARACTER) | (1L << TEXTO))) != 0)) {
				{
				setState(100);
				entradas();
				}
			}

			setState(103);
			match(T__1);
			setState(105);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(104);
				match(PUNTO_COMA);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntradasContext extends ParserRuleContext {
		public List<EntradaContext> entrada() {
			return getRuleContexts(EntradaContext.class);
		}
		public EntradaContext entrada(int i) {
			return getRuleContext(EntradaContext.class,i);
		}
		public EntradasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entradas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).enterEntradas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).exitEntradas(this);
		}
	}

	public final EntradasContext entradas() throws RecognitionException {
		EntradasContext _localctx = new EntradasContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_entradas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			entrada();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(108);
				match(COMA);
				setState(109);
				entrada();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntradaContext extends ParserRuleContext {
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public EntradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entrada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).enterEntrada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).exitEntrada(this);
		}
	}

	public final EntradaContext entrada() throws RecognitionException {
		EntradaContext _localctx = new EntradaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_entrada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			expresion(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declarar_identificadorContext extends ParserRuleContext {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(CubyParser.IDENTIFICADOR, 0); }
		public Declarar_identificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar_identificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).enterDeclarar_identificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).exitDeclarar_identificador(this);
		}
	}

	public final Declarar_identificadorContext declarar_identificador() throws RecognitionException {
		Declarar_identificadorContext _localctx = new Declarar_identificadorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declarar_identificador);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			tipo_dato();
			setState(118);
			match(IDENTIFICADOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_variableContext extends ParserRuleContext {
		public Declarar_identificadorContext declarar_identificador() {
			return getRuleContext(Declarar_identificadorContext.class,0);
		}
		public TerminalNode OP_ASIGNACION() { return getToken(CubyParser.OP_ASIGNACION, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Declaracion_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).enterDeclaracion_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CubyListener ) ((CubyListener)listener).exitDeclaracion_variable(this);
		}
	}

	public final Declaracion_variableContext declaracion_variable() throws RecognitionException {
		Declaracion_variableContext _localctx = new Declaracion_variableContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaracion_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			declarar_identificador();
			setState(121);
			match(OP_ASIGNACION);
			setState(122);
			expresion(0);
			setState(123);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
